# NoobsRPC

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh  run.sh
example/client/: CMakeLists.txt  websocket_client.cpp
example/server/: CMakeLists.txt  websocket_server.cpp
examples/: CMakeLists.txt
examples/client/: main.cpp  test.hpp
examples/server/: event.h  main.cpp  qps.h
include/rest_rpc/: client_util.hpp  codec.h  connection.h  const_vars.h  meta_util.hpp  router.h  rpc_client.hpp  rpc_server.h  string_view.hpp  use_asio.hpp
include/tinyrpc/: handler_type_check.hpp  jsonrpc_error_code.hpp  jsonrpc_ws_service.hpp  rpc_error_code.hpp  rpc_websocket_service.hpp
proto/: CMakeLists.txt  rpc_service_ptl.proto
